# Lab_5

./: .travis.yml  CMakeLists.txt  README.md
StackLib/: CMakeLists.txt  MultiStack.h  Stack.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_TMultiStack.cpp
